k8s-ai-chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-chat-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-chat-ui
  template:
    metadata:
      labels:
        app: ai-chat-ui
    spec:
      containers:
      - name: ai-chat-ui
        image: tahirgdcp128/ai-chat-ui:1.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ai-chat-svc
spec:
  type: LoadBalancer
  selector:
    app: ai-chat-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
